Ajustes links na navbar

--- a/PizzaExpress/PizzaExpress/Views/Pizza/Details.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pizza/Details.cshtml
@@ -40,19 +40,19 @@
             Sabor 1
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ObjListaSabor1.NomeSabor)
+            @Html.DisplayFor(model => model.Sabores[0].DescSabor)
         </dd>
         <dt>
             Sabor 2
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ObjListaSabor2.NomeSabor)
+            @Html.DisplayFor(model => model.Sabores[1].DescSabor)
         </dd>
         <dt>
             Sabor 3
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ObjListSabor3.NomeSabor)
+            @Html.DisplayFor(model => model.Sabores[2].DescSabor)
         </dd>
     </dl>
 </div>
