--- a/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
@@ -48,13 +48,13 @@
                 @Html.DisplayFor(modelItem => item.StatusPedido)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListaSabor1.DescSabor);
+                @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[0].DescSabor);
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListaSabor2.DescSabor);
+                @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[1].DescSabor);
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListSabor3.DescSabor);
+                @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[2].DescSabor);
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.NumPedido }) |
