--- a/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
@@ -6,22 +6,20 @@
     {
         
         <div class="container" id="containerprocurarcliente">
-            <form class="form-inline">
+            
 
                 <h2>Cliente</h2>
-                <div>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Cliente" />
-                    </div>
-                    <input type="submit" class="btn" value="Buscar" />
-                </div>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" name="pesquisar" placeholder="Digite o nome do Cliente">
+                    <button class="btn btn-outline-success my-2 my-sm-0"  type="submit">Buscar</button>
+                </form>
+           
 
 
 
 
 
-
-            </form>
+          
         </div>
 
 
