--- a/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
@@ -6,9 +6,9 @@
     {
 
         <div class="container" id="containerprocurarcliente">
-            <form class="form-inline">
+            <form class="form-inline my-2 my-lg-0">
 
-                <h2>Cliente</h2>
+            
                 <div>
                 <label class="radio-inline">
                     <input type="radio" value="Aberto" name="status">Aberto
