--- a/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PizzaExpress.Models.Pedido>
 <div id="divlistapedidos">
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Cadastrar", "Create")
 </p>
 <table class="table">
     <tr>
@@ -57,12 +57,12 @@
                 @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[2].DescSabor);
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.NumPedido }) |
-                @Html.ActionLink("Details", "Details", new { id = item.NumPedido }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.NumPedido })
-                @Html.ActionLink("Pizza", "Details", "Pizza", new { id = item.ObjPizza.IdPizza },null)
-                @Html.ActionLink("Produto", "Details", "Produto", new { id = item.ObjProduto.IdProduto},null)
-                @Html.ActionLink("Cliente", "Details", "Cliente", new { id = item.ObjCliente.IdCliente }, null)
+                @Html.ActionLink("Editar", "Edit", new { id = item.NumPedido }) |
+                @Html.ActionLink("Detalhes", "Details", new { id = item.NumPedido }) |
+                @Html.ActionLink("Deletar", "Delete", new { id = item.NumPedido })
+                
+                
+               
                 
             </td>
         </tr>
