--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -11,22 +11,16 @@
     {
 
         <section id="containerprocurarcliente">
-            <form class="form-inline">
-                
-                    <h2>Produto</h2>
-                    <div>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Produto" />
-                            </div>
-                        <input type="submit" class="btn" value="Buscar" />
-                        </div>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" name="pesquisar" placeholder="Digite o nome do Produto">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+            </form>
+           
                     
                        
               
                        
-               
-           
-        </form>
+          
            
             </section>
 
