--- a/PizzaExpress/PizzaExpress/Views/Sabor/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Index.cshtml
@@ -7,12 +7,11 @@
             <form class="form-inline">
                 <h3>Sabor</h3>
                 
-                <div>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Sabor" />
-                    </div>
-                    <input type="submit" class="btn" value="Buscar" />
-                </div>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" name="pesquisar" placeholder="Digite o nome do Sabor">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                </form>
+
 
 
 
