--- a/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
@@ -19,19 +19,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Home/Index">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index","Home")">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Sabor/Index">Sabor<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index","Sabor")">Sabor<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Produto/Index">Produto<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index","Produto")">Produto<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Cliente/Index">Cliente<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index","Cliente")">Cliente<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="Pedido/Index">Pedido<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index","Pedido")">Pedido<span class="sr-only">(current)</span></a>
                 </li>
               
               
