--- a/PizzaExpress/PizzaExpress/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,9 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Olá" + User.Identity.GetUserName()+ " ", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Olá " + User.Identity.GetUserName()+ "   ", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
     </ul>
     }
 }
