--- a/PizzaExpress/PizzaExpress/Views/Account/Login.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using PizzaExpress.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Logar";
 }
 
 <h2>@ViewBag.Title.</h2>
