--- a/PizzaExpress/PizzaExpress/Views/Account/Register.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PizzaExpress.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registar";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Criar uma nova conta.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
