Campo pesquisa data de pedido
- Criação de um arquivo Javascript para o pedido do index
- Datepicker para pesquisar o pedido no campo pesquisar pedido

--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -28,10 +28,10 @@
 <div>
 @Html.Partial("ProcurarProduto", Model)
     </div>
-@section scripts
+@section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
-
-
+   
+ 
 
 }
