ViewBag no Controller e View Index de pedido
- ViewBag para armazenar as datas do pedido

--- a/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
@@ -18,7 +18,7 @@
                 </label>
                     </div>
                 <div>
-                    <input class="form-control mr-sm-2" type="text" id="campopesquisar" name="pesquisar" placeholder="Clique nesse campo para seleciona um data para pesquisar pedidos">
+                    <input class="form-control mr-sm-2" type="text" id="campopesquisar" name="pesquisar" value="@(ViewBag.Data)" placeholder="Clique nesse campo para seleciona um data para pesquisar pedidos">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
 
                 </div>
