--- a/PizzaExpress/PizzaExpress/Views/Produto/ProcurarProduto.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/ProcurarProduto.cshtml
@@ -36,9 +36,9 @@
             @Html.DisplayFor(modelItem => item.PrecoProduto)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.IdProduto }) 
-            @Html.ActionLink("Details", "Details", new {  id=item.IdProduto }) 
-            @Html.ActionLink("Delete", "Delete", new {  id=item.IdProduto })
+            @Html.ActionLink("Editar", "Edit", new {  id=item.IdProduto }) 
+            @Html.ActionLink("Detalhes", "Details", new {  id=item.IdProduto }) 
+            @Html.ActionLink("Deletar", "Delete", new {  id=item.IdProduto })
         </td>
     </tr>
 }
