--- a/PizzaExpress/PizzaExpress/Views/Sabor/Details.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Details.cshtml
@@ -40,5 +40,5 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new {  id = Model.IdSabor  }) |
-    @Html.ActionLink("Pesquisar", "Index")
+    @Html.ActionLink("Pesquisar Sabor", "Index")
 </p>
