--- a/PizzaExpress/PizzaExpress/Content/Site.css
+++ b/PizzaExpress/PizzaExpress/Content/Site.css
@@ -1,1 +1,12 @@
-﻿
+﻿footer a
+{
+    margin-left:auto;
+    margin-right:auto;
+}
+footer 
+{
+    text-align:center;
+   
+    position:relative;
+    margin-top:50%;
+}
