--- a/PizzaExpress/PizzaExpress/Views/Home/About.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Home/About.cshtml
@@ -1,7 +1,3 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
 
-<p></p>
+<p>Sistema de Pizzaria criado para automatizar os pedidos</p>
