--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -71,7 +71,7 @@
                 @Html.ValidationMessageFor(model => model.ObjProduto.NomeProduto, "", new { @class = "text-danger" })
                 <br />
                
-                @Html.HiddenFor(model => model.ObjCliente.IdCliente)
+                @Html.HiddenFor(model => model.ObjProduto.IdProduto)
  
     
                
