--- a/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
@@ -25,10 +25,13 @@
                         <a class="nav-link" href="@Url.Action("Index","Sabor")">Sabor<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","Pedido")">Pedido<span class="sr-only"></span></a>
+                        <a class="nav-link" href="@Url.Action("Index","Produto")">Produto<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index","Cliente")">Cliente<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index","Pedido")">Pedido<span class="sr-only"></span></a>
                     </li>
                 </ul>
                 
