--- a/PizzaExpress/PizzaExpress/Views/Pedido/Details.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Details.cshtml
@@ -16,11 +16,10 @@
             @Html.DisplayFor(model => model.ObjCliente.IdCliente)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ObjCliente.Nome)
+            Nome do Cliente
         </dt>
-
         <dd>
-           Nome do Cliente
+            @Html.DisplayFor(model => model.ObjCliente.NomeCliente)
         </dd>
 
         <dt>
