--- a/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Express</title>
+    <link rel="icon" href="~/Content/Icons/Farm-Fresh_pizza.png">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
    
