--- a/PizzaExpress/PizzaExpress/Views/Sabor/ProcurarSabor.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/ProcurarSabor.cshtml
@@ -37,6 +37,7 @@
         <td>
             @Html.ActionLink("Editar", "Edit", new {  id=item.IdSabor }) |
             @Html.ActionLink("Detalhes", "Details", new {  id=item.IdSabor }) |
+            @Html.ActionLink("Deletar", "Delete", new { id = item.IdSabor })
         </td>
     </tr>
 }
