--- a/PizzaExpress/PizzaExpress/Views/Sabor/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Create.cshtml
@@ -49,3 +49,6 @@
 <div>
     @Html.ActionLink("Pesquisar Sabor", "Index")
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
