Hot Fix Validações do Edit Produto e Sabor
- Adicionado um Script para fazer validaçoes dos campos Edit do Produto e Sabor

--- a/PizzaExpress/PizzaExpress/Views/Sabor/Edit.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Edit.cshtml
@@ -57,3 +57,6 @@
 <div>
     @Html.ActionLink("Pesquisar Sabor", "Index")
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
