--- a/PizzaExpress/PizzaExpress/Views/Produto/Edit.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Edit.cshtml
@@ -57,3 +57,6 @@
 <div>
     @Html.ActionLink("Pesquisar Cliente", "Index")
 </div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
